<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IssueNotifier</string>
    <string name="main_reposes">Repositories:</string>
    <string name="issue_list_issues_of_repos">Issues of %s:</string>
    <string name="issue_list_issues_of_all_reposes">Issues of all repositories:</string>
    <string name="main_menu_add_repos_title">Add repository</string>
    <string name="main_menu_delete_reposes_title">Delete repository(ies)</string>
    <plurals name="main_menu_delete_reposes_title">
        <item quantity="one">Delete repository</item>
        <item quantity="other">Delete repositories</item>
    </plurals>
    <string name="main_menu_start_title">Start</string>
    <string name="main_menu_stop_title">Stop</string>
    <string name="main_menu_settings_title">Settings</string>
    <string-array name="settings_screen_intervals">
        <item >30min</item>
        <item >1h</item>
        <item >2h</item>
        <item >3h</item>
        <item >5h</item>
    </string-array>
    <string-array name="settings_screen_states">
        <item >Open</item>
        <item >Closed</item>
        <item >All</item>
    </string-array>
    <string name="settings_screen_interval_title">Interval</string>
    <string name="settings_screen_interval_summary">Interval between fetching</string>
    <string name="settings_screen_state_title">State</string>
    <string name="settings_screen_state_summary">State of fetching issues</string>
    <string name="settings_screen_sorting_by_created_title">Sorting by creation time</string>
    <string name="settings_screen_sorting_by_created_summary">Sorting of issues by creation time instead of update time</string>
    <string name="settings_screen_ringtone_title">Ringtone</string>
    <string name="settings_screen_ringtone_summary_on">Ringtone for notifications is enabled</string>
    <string name="settings_screen_ringtone_summary_off">Ringtone for notifications is disabled</string>
    <string name="settings_screen_vibration_title">Vibration</string>
    <string name="settings_screen_vibration_summary_on">Vibration for notifications is enabled</string>
    <string name="settings_screen_vibration_summary_off">Vibration for notifications is disabled</string>
    <string name="settings_screen_delete_timestamps_title">Delete timestamps</string>
    <string name="settings_screen_about">About</string>
    <string name="notification_service_title">IssueNotifier</string>
    <string name="notification_service_message">IssueNotifier is started.</string>
    <plurals name="notification_issues_title">
        <item quantity="one">Issue!</item>
        <item quantity="other">Issues!</item>
    </plurals>
    <plurals name="notification_issues_message">
        <item quantity="one">You have issue!</item>
        <item quantity="other">You have issues!</item>
    </plurals>
    <string name="add_repos_user_name">User name:</string>
    <string name="add_repos_name">Repository name:</string>
    <string name="add_repos_title">Add repository</string>
    <plurals name="delete_reposes_title">
        <item quantity="one">Delete repository</item>
        <item quantity="other">Delete repositories</item>
    </plurals>
    <plurals name="delete_reposes_message">
        <item quantity="one">Do you want delete checked repository?</item>
        <item quantity="other">Do you want delete checked repositories?</item>
    </plurals>
    <string name="delete_timestamps_title">Delete timestamps</string>
    <string name="delete_timestamps_message">Do you want delete timestamps?</string>
    <string name="error_title">Error</string>
    <string name="fetching_error_message">Can\'t fetch data from server.</string>
    <string name="io_error_message">I/O error.</string>
    <string name="incorrect_user_name_error_message">Incorrect user name.</string>
    <string name="incorrect_repos_name_error_message">Incorrect repository name.</string>
    <string name="existent_repos_error_message">Repository already exists.</string>
    <string name="not_found_repos_error_message">Repository isn\'t on server.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="details_title">Details</string>
    <string name="details_message_repos">Repository: %s</string>
    <string name="details_message_title">Title: %s</string>
    <string name="details_message_number">Number: %d</string>
    <string name="details_message_state">State: %s</string>
    <string name="details_message_comment_count">Comments: %d</string>
    <string name="details_message_user">Author: %s</string>
    <string name="details_message_closed_at">Closed at: %s</string>
    <string name="details_message_created_at">Created at: %s</string>
    <string name="details_message_updated_at">Updated at: %s</string>
    <string name="about_title">About</string>
    <string name="about_message">&lt;b&gt;IssueNotifier 0.1.1&lt;/b&gt;&lt;br&gt;&lt;br&gt;IssueNotifier is application that notifies about issues from GitHub.&lt;br&gt;&lt;br&gt;Copyright &#169; 2015 Łukasz Szpakowski.&lt;br&gt;&lt;br&gt;This application is licensed under the GNU General Public License v3 or later. Click the License button to see the full licensing terms.&lt;br&gt;&lt;br&gt;This application is linked with some third party libraries. Click the Third party button to see more details.</string>
    <string name="about_license">License</string>
    <string name="about_third_party">Third party</string>
</resources>
