<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/addReposItem" android:icon="@android:drawable/ic_menu_add" android:title="@string/main_menu_add_repos_title" android:showAsAction="ifRoom"></item>
    <item android:id="@+id/deleteReposesItem" android:title="@string/main_menu_delete_reposes_title" android:icon="@android:drawable/ic_menu_delete" android:showAsAction="ifRoom"></item>
    <item android:id="@+id/startItem" android:icon="@android:drawable/ic_media_play" android:title="@string/main_menu_start_title" android:showAsAction="ifRoom"></item>
    <item android:id="@+id/stopItem" android:icon="@android:drawable/ic_media_pause" android:title="@string/main_menu_stop_title" android:visible="false" android:showAsAction="ifRoom"></item>
    <item android:id="@+id/settingsItem" android:icon="@android:drawable/ic_menu_preferences" android:title="@string/main_menu_settings_title" android:showAsAction="ifRoom"></item>
</menu>
